Change output schema to match frontend dnd struct requirements